syntax = "proto3";

option java_multiple_files = true;

import "user.proto";

import "movies.proto";

package com.rationaleemotions.generated;

service DashboardService {
	rpc dashBoardDetails(DashboardRequest) returns (DashboardResponse) {}
}

message DashboardRequest {
	string userName = 1;
}

message DashboardResponse {
	BasicDetails basicDetails = 1;
	repeated BasicMovieDetails favoriteMovies = 2;
	repeated BasicMovieDetails recentlyWatchedMovies = 3;
}
